syntax = "proto3";

option go_package = "./protos/paymentproto";

service PaymentService {
    rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
    rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse);
}

message ProcessPaymentRequest {
    int32 user_id = 1;
    string order_id = 2;
    string payment_method = 4; 
    string payment_details = 5;
}

message ProcessPaymentResponse {
    bool success = 1;
    string message = 2;
    string transaction_id = 3; 
}

message RefundPaymentRequest {
    string transaction_id = 1;
    float refund_amount = 2;
    string reason = 3;
}

message RefundPaymentResponse {
    bool success = 1;
    string message = 2;
}
